--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,34 @@
  *= require_tree .
  *= require_self
  */
+
+ header {
+  background-color: #502e2e;
+  width: 100%;
+  height: 100px;
+  display: flex;
+}
+
+.navbar-right {
+  display: flex;
+  list-style: none;
+  margin: 0 0 0 auto;
+  margin-right: 30px;
+  margin-top: 35px;
+}
+
+.logo {
+  margin-left: 20px;
+}
+
+.nav-list-item {
+  margin: 10px;
+  color: #efe2d5;
+  font-size: 20px;
+  font-family: 'Kosugi Maru', sans-serif;
+  text-decoration: none;
+}
+
+.nav-list-item:hover {
+  color: white
+}
