--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,20 @@
 <nav class="navbar-left">
   <h1 class="logo"><%= link_to (image_tag 'news_img_20180509142529233.jpeg', :size =>'270x100'),root_path %></h1>
 </nav>
+
 <nav class="navbar-right">
-  <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
-  <li><%= link_to '新規投稿',  new_article_path, class:"nav-list-item" %></li>
-</nav>
+    <% if user_signed_in? %>
+      <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
+      <li><%= link_to '新規投稿',  new_article_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete,class:"nav-list-item" %></li>
+    <% elsif admin_signed_in? %>
+      <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
+      <li><%= link_to '新規投稿',  new_article_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete,class:"nav-list-item" %></li>
+    <% else %>
+      <li><%= link_to ' About',  about_path,class:"nav-list-item" %></li>
+      <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
+      <li><%= link_to ' 新規登録', new_user_registration_path,class:"nav-list-item" %></li>
+      <li><%= link_to ' ログイン', new_user_session_path,class:"nav-list-item" %></li>
+    <% end %>
+  </nav>
