--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -7,4 +7,17 @@
 <p>
   <%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: '本当に消しますか？' } %>
 </p>
+ <% if article.favorited_by?(current_user) %>
+    <p>
+      <%= link_to article_favorites_path(article), method: :delete do %>
+        ♥<%= article.favorites.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to article_favorites_path(article), method: :post do %>
+        ♡<%= article.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
 <% end %>
