--- a/app/views/public/users/registrations/new.html.erb
+++ b/app/views/public/users/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<h2>新規投稿</h2>
+<h2>新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/users/shared/error_messages", resource: resource %>
