--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -2,6 +2,9 @@
 <% @articles.each do |article| %>
 <p><%= article.name %></p>
 <p>
+  <%= link_to 'Show', article_path(article) %>
+</p>
+<p>
   <%= link_to 'Edit', edit_article_path(article) %>
 </p>
 <p>
