--- a/app/views/admin/articles/show.html.erb
+++ b/app/views/admin/articles/show.html.erb
@@ -1,2 +1,20 @@
-<h1>詳細</h1>
+<h1>詳細（管理者側）</h1>
 <h2><%= @article.name %></h2>
+<p>
+  <%= link_to 'Edit', edit_admin_article_path(@article) %>
+</p>
+<p>
+  <%= link_to 'Destroy', admin_article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %>
+</p>
+
+<div class="comments">
+<p>コメント件数：<%= @article.comments.count %></p>
+  <% @article.comments.each do |comment| %>
+    <%= comment.user.name %>
+    <%= comment.created_at.strftime('%Y/%m/%d') %>
+    <%= comment.body %>
+    <div class="comment-delete">
+      <%= link_to "削除", article_comment_path(comment.article, comment), method: :delete %>
+    </div>
+  <% end %>
+</div>
