--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -1,26 +1,13 @@
 <h1>一覧</h1>
 <% @articles.each do |article| %>
 <p><%= article.name %></p>
+<% if user_signed_in? %>
 <p>
   <%= link_to 'Show', article_path(article) %>
 </p>
+<% elsif admin_signed_in? %>
 <p>
-  <%= link_to 'Edit', edit_article_path(article) %>
+  <%= link_to 'Show', admin_article_path(article) %>
 </p>
-<p>
-  <%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: '本当に消しますか？' } %>
-</p>
- <% if article.favorited_by?(current_user) %>
-    <p>
-      <%= link_to article_favorites_path(article), method: :delete do %>
-        ♥<%= article.favorites.count %> いいね
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to article_favorites_path(article), method: :post do %>
-        ♡<%= article.favorites.count %> いいね
-      <% end %>
-    </p>
-  <% end %>
+<% end %>
 <% end %>
