--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -3,13 +3,53 @@
   <% if @article.stamped_by?(current_user) %>
     <p>
       <%= link_to article_stamps_path(@article), method: :delete do %>
-        ○<%= @article.stamps.count %> スタンプ
+        ○
       <% end %>
     </p>
     <% else %>
     <p>
       <%= link_to article_stamps_path(@article), method: :post do %>
-        ✖️<%= @article.stamps.count %> スタンプ
+        ✖
       <% end %>
     </p>
   <% end %>
+
+  <% if @article.favorited_by?(current_user) %>
+    <p>
+      <%= link_to article_favorites_path(@article), method: :delete do %>
+        ♥<%= @article.favorites.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to article_favorites_path(@article), method: :post do %>
+        ♡<%= @article.favorites.count %> いいね
+      <% end %>
+    </p>
+  <% end %>
+<p>
+  <%= link_to 'Edit', edit_article_path(@article) %>
+</p>
+<p>
+  <%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %>
+</p>
+
+<div class="comments">
+<p>コメント件数：<%= @article.comments.count %></p>
+<% @article.comments.each do |comment| %>
+  <%= comment.user.name %>
+  <%= comment.created_at.strftime('%Y/%m/%d') %>
+  <%= comment.body %>
+  <% if comment.user == current_user %>
+  <div class="comment-delete">
+    <%= link_to "削除", article_comment_path(comment.article, comment), method: :delete %>
+  </div>
+  <% end %>
+<% end %>
+</div>
+<div class="new-comment">
+<%= form_with(model:[@article, @comment], local: true) do |f| %>
+  <%= f.text_area :body, rows:'5',placeholder: "コメントをここに" %>
+  <%= f.submit "送信する" %>
+<% end %>
+</div>
