--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -15,7 +15,7 @@
   <table>
     <div class="form-group">
         <p><%= f.label :商品画像 %>
-        <%= f.attachment_field :image, class: "form-control-file product_image" %></p>
+        <%= f.attachment_field :image, class: "article_image" %></p>
     </div>
 
     <div class="form-group">
