--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -1,5 +1,16 @@
 <h1>詳細</h1>
 <h2><%= @article.name %></h2>
+<%= attachment_image_tag(@article, :image, :fill, 300, 300) %>
+<%= @article.prefecture_name %>
+<%= @article.address_city %>
+<%= @article.address_street %>
+<%= @article.address_building %>
+<%= @article.site_url %>
+<%= @article.tax %>
+<%= @article.opening_hours %>
+<%= @article.closed %>
+<%= @article.introduction %>
+
   <% if @article.stamped_by?(current_user) %>
     <p>
       <%= link_to article_stamps_path(@article), method: :delete do %>
@@ -27,12 +38,10 @@
       <% end %>
     </p>
   <% end %>
-<p>
+
+
   <%= link_to 'Edit', edit_article_path(@article) %>
-</p>
-<p>
-  <%= link_to 'Destroy', article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %>
-</p>
+ 
 
 <div class="comments">
 <p>コメント件数：<%= @article.comments.count %></p>
