--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -13,7 +13,7 @@
 
     <div class="form-group">
         <p><%= f.label :都道府県名 %>
-        <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :code, :name, { prompt: '選択してください' }, class: 'prefecture_name' %></p>
+        <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :name, :name, { prompt: '選択してください' }, class: 'prefecture_name' %></p>
     </div>
 
     <div class="form-group">
