--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -1,8 +1,9 @@
 <h1>一覧</h1>
 <% @articles.each do |article| %>
+<%= attachment_image_tag(article, :image, :fill, 300, 300) %>
 <p><%= article.name %></p>
 <p>
-  <%= link_to 'Edit', edit_article_path(article) %>
+  <%= link_to 'Edit', edit_admin_article_path(article) %>
 </p>
 <p>
   <%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: '本当に消しますか？' } %>
