--- a/app/views/admin/articles/show.html.erb
+++ b/app/views/admin/articles/show.html.erb
@@ -2,6 +2,7 @@
 <h2><%= @article.name %></h2>
 <%= attachment_image_tag(@article, :image, :fill, 300, 300) %>
 <%= @article.prefecture_name %>
+<%= @article.prefecture_code %>
 <%= @article.address_city %>
 <%= @article.address_street %>
 <%= @article.address_building %>
@@ -15,7 +16,8 @@
 </p>
 <p>
   <%= link_to 'Destroy', admin_article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %>
-</p>
+</p>いいね数<%= @article.favorites.count %></p>
+</p>スタンプ数<%= @article.stamps.count %></p>
 
 <div class="comments">
 <p>コメント件数：<%= @article.comments.count %></p>
