--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -1,5 +1,15 @@
 <h1>一覧</h1>
+<div class="search-form">
+  <%= form_with url: search_path, method: :get, local: true do |f| %>
+    <%= f.text_field :keyword, value: @keyword %>
+    <%= f.submit "検索" %>
+  <% end %>
+</div>
+
+<p><%= link_to 'ランキング', ranking_path %> </p>
+
 <% @articles.each do |article| %>
+<%= attachment_image_tag(article, :image, :fill, 300, 300) %>
 <p><%= article.name %></p>
 <% if user_signed_in? %>
 <p>
@@ -11,3 +21,4 @@
 </p>
 <% end %>
 <% end %>
+
