--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,17 @@
 <h2>あああ</h2>
 <%= @user.name %>
+<p>Lv.<%= @user.stamped_articles.count %></p>
+<% if @user.stamped_articles.count < 10 %>
+<P>温泉ビギナー</P>
+<% end %>
+
+<% if @user.id == current_user.id %>
+<%= link_to 'いいね一覧', favorites_users_path %>
+<% end %>
+
+<% @user.stamped_articles.each do |article| %>
+<%= link_to article_path(article) do %>
+<%= attachment_image_tag(article, :image, :fill, 300, 300) %>
+<% end %>
+<% end %>
+
