レビュー機能追加

--- a/app/views/admin/articles/index.html.erb
+++ b/app/views/admin/articles/index.html.erb
@@ -3,6 +3,9 @@
 <%= attachment_image_tag(article, :image, :fill, 300, 300) %>
 <p><%= article.name %></p>
 <p>
+  <%= link_to 'Show', admin_article_path(article) %>
+</p>
+<p>
   <%= link_to 'Edit', edit_admin_article_path(article) %>
 </p>
 <p>
