--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -17,7 +17,7 @@
 </p>
 <% elsif admin_signed_in? %>
 <p>
-  <%= link_to 'Show', admin_article_path(article) %>
+  <%= link_to 'Show(管理者側)', admin_article_path(article) %>
 </p>
 <% end %>
 <% end %>
