--- a/app/views/public/blogs/index.html.erb
+++ b/app/views/public/blogs/index.html.erb
@@ -1,9 +1,16 @@
-<h2>記録</h2>
-<% @blogs.each do |blog| %>
-<p><%= blog.title %></p>
-<p><%= blog.created_at %></p>
-<p>
-  <%= link_to 'Show', blog_path(blog) %>
-</p>
+<p id="notice"><%= notice %></p>
+
+<h1>記録</h1>
+
+
+<%= link_to '日記をかく', new_blog_path %>
+
+<%= month_calendar events: @blogs do |date, blogs| %>
+  <%= date.day %>
+
+  <% blogs.each do |blog| %>
+    <div>
+      <%= link_to blog.title, blog %>
+    </div>
+  <% end %>
 <% end %>
-<p><%= link_to '新規登録', new_blog_path %></p>
