--- a/app/views/public/blogs/show.html.erb
+++ b/app/views/public/blogs/show.html.erb
@@ -9,5 +9,8 @@
 <p>
   <%= link_to 'Destroy', blog_path(@blog), method: :delete, data: { confirm: '本当に消しますか？' } %>
 </p>
+<p>
+  <%= link_to 'Back', blogs_path %>
+</p>
 
 <% end %>
