--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -14,7 +14,7 @@
 <%= form_with model: @article,url: admin_articles_path,local: true do |f| %>
   <table>
     <div class="form-group">
-        <p><%= f.label :商品画像 %>
+        <p><%= f.label :外観写真 %>
         <%= f.attachment_field :image, class: "article_image" %></p>
     </div>
 
