--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,6 +4,7 @@
 
 <nav class="navbar-right">
     <% if user_signed_in? %>
+      <li><%= link_to 'マップ検索', mapping_path, class:"nav-list-item" %></li>
       <li><%= link_to 'マイページ', user_path(current_user), class:"nav-list-item" %></li>
       <li><%= link_to '一覧', articles_path, class:"nav-list-item" %></li>
       <li><%= link_to '記録', blogs_path, class:"nav-list-item" %></li>
@@ -16,6 +17,7 @@
     <% else %>
       <li><%= link_to ' About',  about_path,class:"nav-list-item" %></li>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
+      <li><%= link_to 'マップ検索', mapping_path,class:"nav-list-item" %></li>
       <li><%= link_to ' 新規登録', new_user_registration_path,class:"nav-list-item" %></li>
       <li><%= link_to ' ログイン', new_user_session_path,class:"nav-list-item" %></li>
     <% end %>
