--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -12,54 +12,42 @@
 <%= @article.closed %>
 <%= @article.introduction %>
 
-  <% if @article.stamped_by?(current_user) %>
-    <p>
-      <%= link_to article_stamps_path(@article), method: :delete do %>
-        ★
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to article_stamps_path(@article), method: :post do %>
-        ☆
-      <% end %>
-    </p>
-  <% end %>
+<p class="stamp-btn"><%= render "public/stamps/stamp-btn", article: @article %></p>
+<p class="favorite-btn"><%= render "public/favorites/favorite-btn", article: @article %></p>
 
-  <% if @article.favorited_by?(current_user) %>
-    <p>
-      <%= link_to article_favorites_path(@article), method: :delete do %>
-        ♥<%= @article.favorites.count %> いいね
-      <% end %>
-    </p>
-    <% else %>
-    <p>
-      <%= link_to article_favorites_path(@article), method: :post do %>
-        ♡<%= @article.favorites.count %> いいね
-      <% end %>
-    </p>
-  <% end %>
+<%= link_to 'Edit', edit_article_path(@article) %>
 
 
-  <%= link_to 'Edit', edit_article_path(@article) %>
-
+<p>コメント件数：<%= @article.comments.count %></p>
 
 <div class="comments">
-<p>コメント件数：<%= @article.comments.count %></p>
-<% @article.comments.each do |comment| %>
-  <%= comment.user.name %>
-  <%= comment.created_at.strftime('%Y/%m/%d') %>
-  <%= comment.body %>
-  <% if comment.user == current_user %>
-  <div class="comment-delete">
-    <%= link_to "削除", article_comment_path(comment.article, comment), method: :delete %>
-  </div>
-  <% end %>
-<% end %>
+  <%= render 'public/comments/comment', article: @article,comment: @comment %>
 </div>
+
 <div class="new-comment">
-<%= form_with(model:[@article, @comment], local: true) do |f| %>
-  <%= f.text_area :body, rows:'5',placeholder: "コメントをここに" %>
+ <h3>コメントフォーム</h3>
+<%= form_with(model:[@article, @comment], re: true) do |f| %>
+  <%= f.text_field :title, placeholder: "タイトル" %>
+  <%= f.text_area :body, placeholder: "コメントをここに" %>
+
+  <!-- 評価 -->
+  <div class="form-group row" id="star">
+    <%= f.label :rate,'評価 ', class:'col-md-3 col-form-label' %>
+    <%= f.hidden_field :rate, id: :review_star %>
+  </div>
+  <!-- 評価javascript -->
+  <script>
+  $('#star').raty({
+    size     : 36,
+    starOff:  '<%= asset_path('star-off.png') %>',
+    starOn : '<%= asset_path('star-on.png') %>',
+    starHalf: '<%= asset_path('star-half.png') %>',
+    scoreName: 'comment[rate]',
+    half: true,
+  });
+  </script>
+
+  <%= f.attachment_field :image, class: "article_image" %></p>
   <%= f.submit "送信する" %>
 <% end %>
 </div>
