--- a/app/views/public/blogs/new.html.erb
+++ b/app/views/public/blogs/new.html.erb
@@ -8,6 +8,10 @@
         <p><%= f.label :画像 %>
         <%= f.attachment_field :image, class: "blog_image" %></p>
     </div>
+    <div class="time">
+        <p><%= f.label :start_time %>
+        <%= f.datetime_select :start_time %></p>
+  　</div>
     <div class="form-group">
         <p><%= f.label :内容 %>
         <%= f.text_field :body, autofocus: true, class: "body" %></p>
