レイアウト調整

--- a/app/assets/stylesheets/public/style_map.css
+++ b/app/assets/stylesheets/public/style_map.css
@@ -6,7 +6,8 @@
 	font-size: 16px;
 	line-height: 1.5em;
 	color: #000000;
-	background-color: #ffffff;
+	background-color: #11B1F7;
+	padding: 40px ;
 }
 img {
 	vertical-align: bottom;
