--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,12 +13,28 @@
  *= require_tree .
  *= require_self
  */
+ body {
+   background-image: url(IMG_3735.JPG);
+   margin: 0;
+   padding: 0;
+ }
+
+ main {
+  background-color: rgba( 250, 250, 240, 0.7);
+  width: 80%;
+  margin: 0 auto;
+  padding: 50px 20px 20px 50px;
+  margin-bottom: 70px;
+  margin-top: 50px;
+  background-size: cover;
+ }
 
  header {
-  background-color: #502e2e;
+  background-image: url(kime-yoko.jpg);
   width: 100%;
   height: 100px;
   display: flex;
+  border-bottom: 6px solid #84E8FF;
 }
 
 .navbar-right {
@@ -27,20 +43,22 @@
   margin: 0 0 0 auto;
   margin-right: 30px;
   margin-top: 35px;
+  height: 100%
 }
 
 .logo {
-  margin-left: 20px;
+  height: 100%;
 }
 
 .nav-list-item {
-  margin: 10px;
-  color: #efe2d5;
-  font-size: 20px;
+  margin: 5px;
+  color: white;
+  font-size: 26px;
   font-family: 'Kosugi Maru', sans-serif;
   text-decoration: none;
 }
 
 .nav-list-item:hover {
-  color: white
+  color: gray;
 }
+
