--- a/app/assets/stylesheets/public/articles.scss
+++ b/app/assets/stylesheets/public/articles.scss
@@ -1,3 +1,71 @@
 // Place all the styles related to the public/articles controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.articles-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.article-box {
+  width: 18%;
+  margin: 5px;
+  //background-color: rgba( 250, 250, 250, 0.8);
+  background-image: image-url("IMG_3736.JPG");
+  padding: 0 30px;
+  border: 2px solid #ACAAAA;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+}
+
+.article-show {
+   background-image: image-url("IMG_3736.JPG");
+   background-size: 1150px;
+}
+
+.article-show-top {
+  text-align: center;
+}
+
+.article-show-title {
+  font-size: 50px;
+  padding-top: 30px;
+}
+
+.article-show-image {
+  display: flex;
+  margin-left: 130px;
+  margin-top: 20px;
+  width: auto;
+}
+
+.article-show-image-contents {
+  margin-left: 100px;
+}
+
+.favorite-btn{
+  font-size: 20px;
+}
+
+.article-show-information {
+  padding-top: 50px;
+  margin: 0 auto;
+  font-size: 30px;
+}
+
+.article-show-edit {
+  font-size: 30px;
+  text-decoration: none;
+}
+
+.form-group {
+  margin: 10px;
+  text-align: center;
+}
+
+.new-comment {
+  text-align: center;
+}
