--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -1,3 +1,41 @@
 // Place all the styles related to the public/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.top-visual {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+
+.top-title {
+  font-size: 200px;
+  background-color: rgba(250, 250, 250, 0.5);
+  width: 80%;
+  margin: 150px auto;
+}
+
+.top-container {
+  width: 200px;
+  background-color: rgba(0, 0, 0, 0.5);
+  margin: 0 auto;
+}
+
+.top-enter {
+  color: white;
+  font-size: 50px;
+  text-decoration: none;
+  font-family: "HiraMinProN-W6";
+}
+
+.top-main {
+  width: 85%;
+  margin: 0 auto;
+  margin-bottom: 70px;
+  background-size: cover;
+  background-image: image-url("cloris-ying-WfJUFG3opyo-unsplash.jpg");
+  margin-top: 50px;
+  background-position: center;
+}
