--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -8,17 +8,32 @@
 
 <p><%= link_to 'ランキング', ranking_path %> </p>
 
-<% @articles.each do |article| %>
-<%= attachment_image_tag(article, :image, :fill, 300, 300) %>
-<p><%= article.name %></p>
-<% if user_signed_in? %>
-<p>
-  <%= link_to 'Show', article_path(article) %>
-</p>
-<% elsif admin_signed_in? %>
-<p>
-  <%= link_to 'Show(管理者側)', admin_article_path(article) %>
-</p>
-<% end %>
-<% end %>
-
+<div class= "articles-container">
+  <% @articles.each do |article| %>
+    <div class="article-box">
+      <p><%= article.name %></p>
+        <% if admin_signed_in? %>
+        <%= link_to admin_article_path(article) do %>
+        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <% end %>
+      <% else %>
+        <%= link_to article_path(article) do %>
+        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <% end %>
+      <% end %>
+      <div id="star-rate-<%= article.id %>"></div>
+      <p>コメント件数：<%= article.comments.count %></p>
+        <script>
+        $('#star-rate-<%= article.id %>').raty({
+          size: 36,
+          starOff:  '<%= asset_path('star-off.png') %>',
+          starOn : '<%= asset_path('star-on.png') %>',
+          starHalf: '<%= asset_path('star-half.png') %>',
+          half: true,
+          readOnly: true,
+          score: <%= article.comments.average(:rate).to_f.round(1) %>,
+        });
+        </script>
+    </div>
+  <% end %>
+</div>
