--- a/app/views/public/articles/mapping.html.erb
+++ b/app/views/public/articles/mapping.html.erb
@@ -1,12 +1,5 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>無題ドキュメント</title>
-<link href="style_map.css" rel="stylesheet" type="text/css">
-</head>
 
-<body class="map-body">
+<div class="map-body">
 
 <div id="japan-map" class="clearfix">
 
@@ -289,5 +282,4 @@
 
 </div> <!-- japan-map -->
 
-</body>
-</html>
+</div>
