--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,1 +1,12 @@
-<h1>トップページ</h1>
+ 
+    <main class="top-main">
+    <div class="top-visual">
+      <div class="empty">
+        <h1 class="top-title">ON-SEN</h1>
+      </div>
+      <div class="top-container">
+        <%= link_to("入湯", new_user_session_path,class:"top-enter") %>
+      </div>
+    </div>
+    </main>
+
