--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,3 +1,4 @@
+<div class="article-show">
 <h2>あああ</h2>
 <%= @user.name %>
 <p>Lv.<%= @user.stamped_articles.count %></p>
@@ -5,13 +6,14 @@
 <P>温泉ビギナー</P>
 <% end %>
 
-<% if @user.id == current_user.id %>
-<%= link_to 'いいね一覧', favorites_users_path %>
-<% end %>
-
 <% @user.stamped_articles.each do |article| %>
 <%= link_to article_path(article) do %>
-<%= attachment_image_tag(article, :image, :fill, 300, 300) %>
+<%= attachment_image_tag(article, :image, :fill, 100, 100) %>
 <% end %>
 <% end %>
 
+<% if @user.id == current_user.id %>
+<%= link_to '行きたいリスト', favorites_users_path %>
+<% end %>
+
+</div>
