レイアウト調整2

--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,4 @@
- 
+  <body class="top-body">
     <main class="top-main">
     <div class="top-visual">
       <div class="empty">
@@ -9,4 +9,4 @@
       </div>
     </div>
     </main>
-
+</body>
