--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,27 +14,28 @@
  *= require_self
  */
  body {
-   background-image: url(IMG_3735.JPG);
+   /*background-image: url(IMG_3735.JPG);*/
    margin: 0;
    padding: 0;
  }
 
  main {
-  background-color: rgba( 250, 250, 240, 0.7);
+  /*background-color: rgba( 250, 250, 240, 0.7);*/
   width: 80%;
   margin: 0 auto;
   padding: 50px 20px 20px 50px;
   margin-bottom: 70px;
-  margin-top: 50px;
+  /*margin-top: 30px;*/
   background-size: cover;
  }
 
  header {
-  background-image: url(kime-yoko.jpg);
+  /*background-image: url(kime-yoko.jpg);*/
+  background-color: white;
   width: 100%;
   height: 100px;
   display: flex;
-  border-bottom: 6px solid #84E8FF;
+  border-bottom: 6px solid black;
 }
 
 .navbar-right {
@@ -52,7 +53,7 @@
 
 .nav-list-item {
   margin: 5px;
-  color: white;
+  color: black;
   font-size: 26px;
   font-family: 'Kosugi Maru', sans-serif;
   text-decoration: none;
