--- a/app/assets/stylesheets/public/articles.scss
+++ b/app/assets/stylesheets/public/articles.scss
@@ -13,7 +13,7 @@
   width: 18%;
   margin: 5px;
   //background-color: rgba( 250, 250, 250, 0.8);
-  background-image: image-url("IMG_3736.JPG");
+  //background-image: image-url("IMG_3736.JPG");
   padding: 0 30px;
   border: 2px solid #ACAAAA;
   text-align: center;
@@ -22,8 +22,12 @@
 }
 
 .article-show {
-   background-image: image-url("IMG_3736.JPG");
-   background-size: 1150px;
+   //background-image: image-url("IMG_3736.JPG");
+   border: 2px solid #ACAAAA;
+   background-size: cover;
+   width: 70%;
+   //background-position: center;
+   margin: 0 auto;
 }
 
 .article-show-top {
@@ -37,6 +41,8 @@
 
 .article-show-image {
   display: flex;
+  margin: 0 auto;
+  text-align: center;
   margin-left: 130px;
   margin-top: 20px;
   width: auto;
@@ -53,11 +59,10 @@
 .article-show-information {
   padding-top: 50px;
   margin: 0 auto;
-  font-size: 30px;
+  font-size: 20px;
 }
 
 .article-show-edit {
-  font-size: 30px;
   text-decoration: none;
 }
 
