--- a/app/assets/stylesheets/public/users.scss
+++ b/app/assets/stylesheets/public/users.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the public/users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.user-show-top {
+  margin-left: 40px;
+  display: flex;
+}
+
+.user-show-top-right {
+  margin-left: 60px;
+}
+
+.user-stamp-container {
+  display: flex;
+  flex-wrap: wrap;
+}
