--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,14 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+  
+  <% if current_page?(root_path) %>
+  <%= render 'layouts/header' %>
+  <%= yield %>
+  <% else %>
   <body>
     <%= render 'layouts/header' %>
-      <% if current_page?(root_path) %>
-      <%= yield %>
-
-    <% else %>
     <main><%= yield %></main>
-    <% end %>
   </body>
+  <% end %>
 </html>
