--- a/app/assets/stylesheets/public/style_map.css
+++ b/app/assets/stylesheets/public/style_map.css
@@ -6,12 +6,12 @@
 	font-size: 16px;
 	line-height: 1.5em;
 	color: #000000;
-	background-color: #11B1F7;
+	background-color: white;
 	padding: 40px ;
 }
 img {
 	vertical-align: bottom;
-} 
+}
 a:hover img {
 	opacity: 0.7;
 		-ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity = 60);
@@ -84,7 +84,7 @@ a:hover {
 	color: #ffffff;
 }
 
-#hokkaido {	
+#hokkaido {
 	width: 133px;
 	height: 70px;
 }
