--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -6,7 +6,7 @@
   <% end %>
 </div>
 
-<p><%= link_to 'ランキング', ranking_path %> </p>
+<p><%= link_to 'ランキングページへ', ranking_path,class:"fas fa-crown" %></p>
 
 <div class= "articles-container">
   <% @articles.each do |article| %>
