--- a/app/views/public/articles/show.html.erb
+++ b/app/views/public/articles/show.html.erb
@@ -95,4 +95,6 @@
     <%= render 'public/comments/comment', article: @article,comment: @comment %>
   </div>
 
+  <p><%= link_to '戻る', articles_path %></p>
+
 </div>
