--- a/app/views/public/articles/ranking.html.erb
+++ b/app/views/public/articles/ranking.html.erb
@@ -1,11 +1,29 @@
-<h2>行きたいランキング</h2>
-<% @all_ranks.each do |article| %>
-  <%= attachment_image_tag(article, :image, :fill, 300, 300) %>
-  <p><%= article.name %></p>
-<% end %>
+<h2 class="fas fa-crown">行きたいランキング</h2>
+<div class= "articles-container">
+  <% @all_ranks.each.with_index(1) do |article, i| %>
+    <div class="article-box">
+      <p>第<%= i%>位</p>
+      <p><%= article.name %></p>
+      <%= link_to article_path(article) do %>
+      <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+      <% end %>
 
-<h2>スタンプランキング</h2>
-<% @stamp_ranks.each do |article| %>
-  <%= attachment_image_tag(article, :image, :fill, 300, 300) %>
-  <p><%= article.name %></p>
+      <p>コメント件数：<%= article.comments.count %></p>
+
+    </div>
+  <% end %>
+</div>
+
+<h2 class="fas fa-crown">スタンプランキング</h2>
+<div class= "articles-container">
+<% @stamp_ranks.each.with_index(1) do |article, a| %>
+  <div class="article-box">
+    <p>第<%= a%>位</p>
+    <p><%= article.name %></p>
+    <%= link_to article_path(article) do %>
+    <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+    <% end %>
+      <p>コメント件数：<%= article.comments.count %></p>
+  </div>
 <% end %>
+</div>
