--- a/app/views/public/articles/search.html.erb
+++ b/app/views/public/articles/search.html.erb
@@ -1,13 +1,31 @@
-<h2>Results index</h2>
+<h2>検索結果</h2>
 
-<table class="table table-hover table-inverse">
-    <tbody>
-      <% @articles.each do |article| %>
-        <tr>
-          <td><%= article.name %></td>
-          <td><%= article.introduction %></td>
-          <%= attachment_image_tag(article, :image, :fill, 100, 100) %>
-        </tr>
+<div class= "articles-container">
+  <% @articles.each do |article| %>
+    <div class="article-box">
+      <p><%= article.name %></p>
+        <% if admin_signed_in? %>
+        <%= link_to admin_article_path(article) do %>
+        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <% end %>
+      <% else %>
+        <%= link_to article_path(article) do %>
+        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <% end %>
       <% end %>
-    </tbody>
-</table>
+      <div id="star-rate-<%= article.id %>"></div>
+      <p>コメント件数：<%= article.comments.count %></p>
+        <script>
+        $('#star-rate-<%= article.id %>').raty({
+          size: 36,
+          starOff:  '<%= asset_path('star-off.png') %>',
+          starOn : '<%= asset_path('star-on.png') %>',
+          starHalf: '<%= asset_path('star-half.png') %>',
+          half: true,
+          readOnly: true,
+          score: <%= article.comments.average(:rate).to_f.round(1) %>,
+        });
+        </script>
+    </div>
+  <% end %>
+</div>
