--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,12 +1,24 @@
 <h2>いいね一覧</h2>
-
+<div class= "articles-container">
 <% current_user.favorite_articles.each do |article| %>
-
-
-<%= attachment_image_tag(article, :image, :fill, 300, 300) %>
-
-<%= link_to article_path(article) do %>
+<div class="article-box">
 <%= article.name %>
+<%= link_to article_path(article) do %>
+<%= attachment_image_tag(article, :image, :fill, 200, 200) %>
 <% end %>
-
+      <div id="star-rate-<%= article.id %>"></div>
+      <p>コメント件数：<%= article.comments.count %></p>
+        <script>
+        $('#star-rate-<%= article.id %>').raty({
+          size: 36,
+          starOff:  '<%= asset_path('star-off.png') %>',
+          starOn : '<%= asset_path('star-on.png') %>',
+          starHalf: '<%= asset_path('star-half.png') %>',
+          half: true,
+          readOnly: true,
+          score: <%= article.comments.average(:rate).to_f.round(1) %>,
+        });
+        </script>
+</div>
 <% end %>
+</div>
