--- a/app/views/public/users/registrations/new.html.erb
+++ b/app/views/public/users/registrations/new.html.erb
@@ -1,34 +1,36 @@
-<h2>新規登録</h2>
+<div class="devise-container">
+<h2 class="sign-up-title">新規登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/users/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
+  <div class="form-group">
+    <%= f.label :名前 %><br />
     <%= f.text_field :name, autofocus: true %>
   </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <div class="form-group">
+    <%= f.label :メールアドレス %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
+  <div class="form-group">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <em>(<%= @minimum_password_length %>文字以上)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <div class="form-group">
+    <%= f.label :パスワード（確認用） %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form-group">
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
 
 <%= render "public/users/shared/links" %>
+</div>
