--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -45,3 +45,33 @@
   margin-top: 50px;
   background-position: center;
 }
+
+.about {
+ text-align: center;
+
+}
+
+.about-title {
+ font-size: 70px;
+}
+
+.about-image {
+  background-image: image-url('AME895_onsengai_TP_V.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 1000px;
+  height: 400px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+.nil {
+  height: 150px;
+}
+
+.about-introduction {
+   background-color: rgba( 0, 0, 0, 0.7);
+   width: 100%;
+   margin: 0 auto;
+   color: white;
+}
