--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,11 +1,12 @@
 
-  <h1 class="about-title">About</h1>
-  <div class="about-introduction">
-    ながのCAKEは全国発送可能なケーキ屋さんです。<br>
-    お⼦様からお年寄りの⽅までお召し上がりいただけるよう、<br>
-    様々なバリエーションをご⽤意しております。<br>
-    また、全国へ発送可能ですので「いつ」でも「どこ」でもご注⽂いただけます。<br>
-    ぜひご注⽂ください。<br>
+<div class="about">
+  <div class="about-image">
+    <div class="nil"></div>
+    <div class="about-introduction">
+    温泉についての情報をユーザー同士で共有するアプリケーションです。<br>
+    情報の共有だけでなく、自分が行った温泉の記録を残したり、<br>
+    近くの温泉を検索できたりとさまざまな機能を備えております。<br>
   </div>
-  <div class="about-image"></div>
+  </div>
   <p>会員登録はこちら  <%= link_to "新規登録", new_user_registration_path %></p>
+</div>
