--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -24,23 +24,8 @@
     </div>
 
     <div class="form-group">
-        <p><%= f.label :都道府県名 %>
-        <%= f.collection_select :prefecture_code, JpPrefecture::Prefecture.all, :name, :name, { prompt: '選択してください' }, class: 'prefecture_name' %></p>
-    </div>
-
-    <div class="form-group">
-        <p><%= f.label :市町村名 %>
+        <p><%= f.label :住所 %>
         <%= f.text_field :address_city, autocomplete: 'address_city', class: 'address_city' %></p>
-    </div>
-
-    <div class="form-group">
-        <p><%= f.label :番地 %>
-        <%= f.text_field :address_street, autocomplete: 'address_street', class: 'address_street' %></p>
-    </div>
-
-    <div class="form-group">
-        <p><%= f.label :建物名 %>
-        <%= f.text_field :address_building, autocomplete: 'address_building', class: 'address_building' %></p>
     </div>
 
     <div class="form-group">
