--- a/app/views/public/articles/mapping.html.erb
+++ b/app/views/public/articles/mapping.html.erb
@@ -11,7 +11,7 @@
         		<p>北海道</p>
           	</div>
 		</a>
-		<a href="#">
+		<a href="/googlemap">
 			<div id="aomori">
 				<p>青森</p>
 			</div>
