--- a/app/views/public/stamps/create.js.erb
+++ b/app/views/public/stamps/create.js.erb
@@ -1,1 +1,1 @@
-(".stamp-btn").html("<%= escape_javascript(render partial: 'stamps/stamp-btn', locals: {article: @article}) %>");
+$(".stamp-btn").html("<%= escape_javascript(render partial: 'public/stamps/stamp-btn', locals: {article: @article}) %>");
