--- a/app/views/public/favorites/create.js.erb
+++ b/app/views/public/favorites/create.js.erb
@@ -1,1 +1,1 @@
-(".favorite-btn").html("<%= escape_javascript(render partial: 'favorites/favorite-btn', locals: {article: @article}) %>");
+$(".favorite-btn").html("<%= escape_javascript(render partial: 'public/favorites/favorite-btn', locals: {article: @article}) %>");
