--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -9,13 +9,13 @@
         <h2>温泉Lv.<%= @user.stamped_articles.count %></h2>
         <% if @user.stamped_articles.count <= 10 %>
         <h2>ランク：温泉ビギナー</h2>
-        <% elsif 10 < @user.stamped_articles.count <= 30 %>
+        <% elsif @user.stamped_articles.count <= 30 %>
         <h2>ランク：温泉好き</h2>
-        <% elsif 30 < @user.stamped_articles.count <= 50 %>
+        <% elsif @user.stamped_articles.count <= 50 %>
         <h2>ランク：温泉師匠</h2>
-        <% elsif 50 < @user.stamped_articles.count <= 100 %>
+        <% elsif @user.stamped_articles.count <= 75 %>
         <h2>ランク：温泉マスター</h2>
-        <% elsif 100 < @user.stamped_articles.count %>
+        <% elsif @user.stamped_articles.count >= 100 %>
         <h2>温泉ゴッド</h2>
         <% end %>
         <h3><%= link_to '温泉の記録', blogs_path %></h3>
@@ -32,7 +32,7 @@
       <% @user.stamped_articles.each do |article| %>
         <div class="user-stamp-box">
         <%= link_to article_path(article) do %>
-        <%= attachment_image_tag(article, :image, :fill, 100, 100) %>
+        <%= attachment_image_tag(article, :image, :fill, 103, 103) %>
         <% end %>
         </div>
       <% end %>
