クリッカブルマップリンク先設定

--- a/app/views/public/articles/mapping.html.erb
+++ b/app/views/public/articles/mapping.html.erb
@@ -11,11 +11,11 @@
         		<p>北海道</p>
           	</div>
 		</a>
-		<a href="/googlemap">
+		<%= link_to map_prefecture_path(prefecture: "青森県") do %>
 			<div id="aomori">
 				<p>青森</p>
 			</div>
-		</a>
+		<% end %>
 		<a href="#">
 			<div id="akita">
 				<p>秋田</p>
