--- a/app/views/public/articles/googlemap.html.erb
+++ b/app/views/public/articles/googlemap.html.erb
@@ -8,18 +8,41 @@
 
 <script>
   let map
-
+  let geocoder
     function initMap(){
       geocoder = new google.maps.Geocoder()
 
       map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: 35.68123620000001, lng:139.7671248},
-          zoom: 12,
+          //center: {lat: 35.68123620000001, lng:139.7671248},
+          zoom: 10,
       });
+}
+function codeAddress(){
+  // 入力を取得
+   initMap();
+  let inputAddress = "<%= @prefecture %>"
 
-      <% @articles.each do |m| %>
+
+  // geocodingしたあとmapを移動
+  geocoder.geocode( { 'address': inputAddress}, function(results, status) {
+    if (status == 'OK') {
+　　　　　　　　　　　　// map.setCenterで地図が移動
+      map.setCenter(results[0].geometry.location);
+
+　　　　　　　　　　　　// google.maps.MarkerでGoogleMap上の指定位置にマーカが立つ
+      var marker = new google.maps.Marker({
+          map: map,
+          position: results[0].geometry.location
+      });
+    } else {
+      alert('Geocode was not successful for the following reason: ' + status);
+    }
+  });
+
+  <% @articles.each do |m| %>
           (function(){
           var contentString = "住所：<%= m.address_city %>";
+
           var marker = new google.maps.Marker({
               position:{lat: <%= m.latitude %>, lng: <%= m.longitude %>},
               map: map,
@@ -27,6 +50,9 @@
           });
           })();
       <% end %>
-      }
+
+}
+
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV["Google_Maps_API_Key"]%>&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%=ENV["Google_Maps_API_Key"]%>&callback=codeAddress" async defer></script>
+
