--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class=user-show-introduction>
-       <p> <%= @user.introduction %></p>
+      <%= @user.introduction %>
     </div>
     <div class="user-stamp-container">
       <% @user.stamped_articles.each do |article| %>
