--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,3 +79,16 @@
 #map {
     margin: 0 auto;
 }
+
+ footer {
+  background-color: black;
+  width: 100%;
+  height: 70px;
+  color: white;
+  text-align: center;
+}
+
+textarea {
+    width: 300px;
+    height: 100px;
+}
