--- a/app/assets/stylesheets/public/comments.scss
+++ b/app/assets/stylesheets/public/comments.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the public/comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comment-box {
+  margin-left: 60px;
+  margin-bottom: 40px;
+}
+
+.comment-box-top {
+  display: flex;
+}
+
+.comment-box-bottom {
+  text-align: none;
+  word-break: break-word;
+}
+
+.return-btn {
+  text-align: center;
+}
