--- a/app/assets/stylesheets/public/users.scss
+++ b/app/assets/stylesheets/public/users.scss
@@ -16,6 +16,7 @@
   height: 150px;
   border: 2px solid #ACAAAA;
   margin: 0 auto;
+  word-break: break-word;
 }
 
 .user-stamp-container {
@@ -25,4 +26,12 @@
   margin: 0 auto;
   margin-top: 30px;
   margin-bottom: 20px;
+}
+
+.user-show-empty {
+  height: 90px;
+}
+
+.word-break {
+  word-break: break-word;
 }
