--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,7 @@
       <li><%= link_to '記録', blogs_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete,class:"nav-list-item" %></li>
     <% elsif admin_signed_in? %>
-      <h2>管理者</h2>
+      <h2 class="nav-list-item">管理者ページ</h2>
       <li><%= link_to '一覧',  articles_path, class:"nav-list-item" %></li>
       <li><%= link_to '新規投稿',  new_admin_article_path, class:"nav-list-item" %></li>
       <li><%= link_to 'ログアウト', destroy_admin_session_path, method: :delete,class:"nav-list-item" %></li>
