--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,10 +13,12 @@
   <% if current_page?(root_path) %>
   <%= render 'layouts/header' %>
   <%= yield %>
+  <%= render 'layouts/footer' %>
   <% else %>
   <body>
     <%= render 'layouts/header' %>
     <main><%= yield %></main>
+    <%= render 'layouts/footer' %>
   </body>
   <% end %>
 </html>
