--- a/app/views/public/articles/ranking.html.erb
+++ b/app/views/public/articles/ranking.html.erb
@@ -2,6 +2,7 @@
 <div class= "articles-container">
   <% @all_ranks.each.with_index(1) do |article, i| %>
     <div class="article-box">
+      <i class="fas fa-crown" style="color:gold;"></i>
       <p>第<%= i%>位</p>
       <p><%= article.name %></p>
       <%= link_to article_path(article) do %>
@@ -18,6 +19,7 @@
 <div class= "articles-container">
 <% @stamp_ranks.each.with_index(1) do |article, a| %>
   <div class="article-box">
+    <i class="fas fa-crown" style="color:gold;"></i>
     <p>第<%= a%>位</p>
     <p><%= article.name %></p>
     <%= link_to article_path(article) do %>
