--- a/app/views/public/blogs/edit.html.erb
+++ b/app/views/public/blogs/edit.html.erb
@@ -1,3 +1,5 @@
+<div class="devise-container">
+<h2>記録を追加</h2>
 <%= form_with model: @blog,url: blog_path,local: true do |f| %>
 <table>
     <div class="form-group">
@@ -9,15 +11,23 @@
         <%= f.attachment_field :image, class: "blog_image" %></p>
     </div>
     <div class="form-group">
+        <p><%= f.label :日時 %>
+        <%= f.datetime_select :start_time %></p>
+  　</div>
+    <div class="form-group">
         <p><%= f.label :内容 %>
-        <%= f.text_field :body, autofocus: true, class: "body" %></p>
+        <%= f.text_area :body, autofocus: true, class: "body" %></p>
     </div>
     <div class="form-group">
         <p><%= f.label :メモ %>
-        <%= f.text_field :memo, autofocus: true, class: "memo" %></p>
+        <%= f.text_area :memo, autofocus: true, class: "memo" %></p>
     </div>
-    <tr class="actions">
+    <div class="actions">
       <%= f.submit "変更" ,class: 'btn btn-sm btn-success' %>
-    </tr>
+    </div>
 </table>
 <% end %>
+<p><%= link_to '戻る', blog_path %></p>
+</div>
+<div class="user-show-empty"></div>
+
