--- a/app/views/public/blogs/show.html.erb
+++ b/app/views/public/blogs/show.html.erb
@@ -1,16 +1,28 @@
-<p><%= @blog.title %></p>
-<%= attachment_image_tag(@blog, :image, :fill, 300, 300) %>
-<p><%= @blog.body %></p>
-<p><%= @blog.memo %></p>
-<% if @user.id == current_user.id %>
-<p>
-  <%= link_to 'Edit', edit_blog_path(@blog) %>
-</p>
-<p>
-  <%= link_to 'Destroy', blog_path(@blog), method: :delete, data: { confirm: '本当に消しますか？' } %>
-</p>
-<p>
-  <%= link_to 'Back', blogs_path %>
-</p>
+<div class="blog-show">
+  <h1 class="blog-title"><%= @blog.title %></h1>
+  <h4 class="blog-title"><%= @blog.start_time.strftime('%Y/%m/%d') %></h4>
+  <div class="blog-container">
 
-<% end %>
+    <div class="blog-top">
+      <%= attachment_image_tag(@blog, :image, :fill, 300, 300) %>
+    <div class="blog-memo">Memo
+      <%= @blog.memo %>
+      </div>
+    </div>
+
+    <div class="blog-body">
+      <%= @blog.body %>
+    </div>
+
+    <div class="blog-bottom">
+      <% if @user.id == current_user.id %>
+      <p>
+      <%= link_to '編集', edit_blog_path(@blog) %> |
+      <%= link_to '戻る', blogs_path %> |
+      <%= link_to '削除', blog_path(@blog), method: :delete, data: { confirm: '本当に消しますか？' } %>
+      </p>
+      <% end %>
+    </div>
+
+  </div>
+</div>
