--- a/app/views/public/comments/_comment.html.erb
+++ b/app/views/public/comments/_comment.html.erb
@@ -1,27 +1,32 @@
 <% @article.comments.each do |comment| %>
+<div class="comment-box">
+  <div class="comment-box-top">
+  <%= link_to user_path(comment.user) do %>
+  <%= attachment_image_tag(@user, :profile_image_id, :fill, 30, 30, fallback: "My Post (11).png", size:'30x30') %>
+  <% end %>
   <%= comment.user.name %>
-  <%= comment.created_at.strftime('%Y/%m/%d') %>
   <%= comment.title %>
-  <%= comment.body %>
-  
-  <div id="star-rate-<%= comment.id %>"></div>
-          <script>
-          $('#star-rate-<%= comment.id %>').raty({
-            size: 36,
-            starOff:  '<%= asset_path('star-off.png') %>',
-            starOn : '<%= asset_path('star-on.png') %>',
-            starHalf: '<%= asset_path('star-half.png') %>',
-            half: true,
-            readOnly: true,
-            score: <%= comment.rate %>,
-          });
-          </script>  
-          
-  <%= attachment_image_tag(comment, :image, :fill, 100, 100) %>
-  
+    <div id="star-rate-<%= comment.id %>"></div>
+            <script>
+            $('#star-rate-<%= comment.id %>').raty({
+              size: 36,
+              starOff:  '<%= asset_path('star-off.png') %>',
+              starOn : '<%= asset_path('star-on.png') %>',
+              starHalf: '<%= asset_path('star-half.png') %>',
+              half: true,
+              readOnly: true,
+              score: <%= comment.rate %>,
+            });
+            </script>
+  </div>
+  <div class="comment-box-bottom">
+    <div><%= comment.body %></div>
+    <div><%= comment.created_at.strftime('%Y/%m/%d') %></div>
+  </div>
   <% if comment.user == current_user %>
   <div class="comment-delete">
-    <%= link_to '削除', article_comment_path(comment.article_id, comment.id), class: 'btn-sm btn-danger', method: :delete,  remote: true %>
+    <%= link_to '削除', article_comment_path(comment.article_id, comment.id), class: 'btn-sm btn-danger', method: :delete,  remote: false %>
   </div>
   <% end %>
+</div>
 <% end %>
