--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -2,7 +2,7 @@
 <div class= "articles-container">
 <% current_user.favorite_articles.each do |article| %>
 <div class="article-box">
-<%= article.name %>
+<p><%= article.name %></p>
 <%= link_to article_path(article) do %>
 <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
 <% end %>
@@ -22,3 +22,4 @@
 </div>
 <% end %>
 </div>
+<div class="user-show-empty"></div>
