--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -1,6 +1,6 @@
 <h2>いいね一覧</h2>
 <div class= "articles-container">
-<% current_user.favorite_articles.each do |article| %>
+<% @user.favorite_articles.each do |article| %>
 <div class="article-box">
 <p><%= article.name %></p>
 <%= link_to article_path(article) do %>
