--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <% if current_page?(root_path) %>
+  <div id="splash">
+      <div id="splash_logo"><%= image_tag 'My Post (14).png', class: "d-block w-100 fadeUp"%></div>
+  </div>
   <%= render 'layouts/header' %>
   <%= yield %>
   <%= render 'layouts/footer' %>
