--- a/app/assets/stylesheets/public/articles.scss
+++ b/app/assets/stylesheets/public/articles.scss
@@ -82,3 +82,11 @@
   margin-top: 10px;
 }
 
+.grid-article {
+  transition: .3s;
+}
+
+.grid-article:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 2rem rgba(0,0,0,5);
+}
