--- a/app/views/admin/articles/show.html.erb
+++ b/app/views/admin/articles/show.html.erb
@@ -53,7 +53,7 @@
       <td><%= link_to '削除', admin_article_path(@article), method: :delete, data: { confirm: '本当に消しますか？' } %></td>
   </table>
 <!--googlemap表示　-->
-<div id='map'></div>
+<div id='map' data-no-turbolink></div>
 <style>
 #map {
   height: 300px;
