--- a/app/views/public/articles/index.html.erb
+++ b/app/views/public/articles/index.html.erb
@@ -1,7 +1,7 @@
 <h1>一覧</h1>
 <div class="search-form">
   <%= form_with url: search_path, method: :get, local: true do |f| %>
-    <%= f.text_field :keyword, value: @keyword %>
+    <%= f.text_field :keyword, value: @keyword, placeholder: "温泉名、県名などを入力" %>
     <%= f.submit "検索" %>
   <% end %>
 </div>
@@ -14,11 +14,11 @@
       <p><%= article.name %></p>
         <% if admin_signed_in? %>
         <%= link_to admin_article_path(article) do %>
-        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
         <% end %>
       <% else %>
         <%= link_to article_path(article) do %>
-        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
         <% end %>
       <% end %>
       <div id="star-rate-<%= article.id %>"></div>
