--- a/app/views/public/articles/ranking.html.erb
+++ b/app/views/public/articles/ranking.html.erb
@@ -6,7 +6,7 @@
       <p>第<%= i%>位</p>
       <p><%= article.name %></p>
       <%= link_to article_path(article) do %>
-      <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+      <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
       <% end %>
 
       <p>コメント件数：<%= article.comments.count %></p>
@@ -23,7 +23,7 @@
     <p>第<%= a%>位</p>
     <p><%= article.name %></p>
     <%= link_to article_path(article) do %>
-    <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+    <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
     <% end %>
       <p>コメント件数：<%= article.comments.count %></p>
   </div>
