--- a/app/views/public/articles/search.html.erb
+++ b/app/views/public/articles/search.html.erb
@@ -6,11 +6,11 @@
       <p><%= article.name %></p>
         <% if admin_signed_in? %>
         <%= link_to admin_article_path(article) do %>
-        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
         <% end %>
       <% else %>
         <%= link_to article_path(article) do %>
-        <%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
         <% end %>
       <% end %>
       <div id="star-rate-<%= article.id %>"></div>
