--- a/app/views/public/users/favorites.html.erb
+++ b/app/views/public/users/favorites.html.erb
@@ -4,7 +4,7 @@
 <div class="article-box">
 <p><%= article.name %></p>
 <%= link_to article_path(article) do %>
-<%= attachment_image_tag(article, :image, :fill, 200, 200) %>
+<%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
 <% end %>
       <div id="star-rate-<%= article.id %>"></div>
       <p>コメント件数：<%= article.comments.count %></p>
