--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -32,7 +32,7 @@
       <% @user.stamped_articles.each do |article| %>
         <div class="user-stamp-box">
         <%= link_to article_path(article) do %>
-        <%= attachment_image_tag(article, :image, :fill, 103, 103) %>
+        <%= attachment_image_tag article, :image, :fill, 103, 103, class: 'grid-article' %>
         <% end %>
         </div>
       <% end %>
