--- a/app/views/admin/articles/edit.html.erb
+++ b/app/views/admin/articles/edit.html.erb
@@ -1,3 +1,13 @@
+<% if @article.errors.any? %>
+  <div id="error_explanation">
+    <h3><%= pluralize(@article.errors.count, "error") %>件のエラーが発生しました</h3>
+    <ul>
+      <% @article.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
 <div class="devise-container">
 <h1>編集(管理者側)</h1>
 <%= form_with model: @article,url: admin_article_path,local: true do |f| %>
@@ -32,6 +42,11 @@
     <div class="form-group">
         <p><%= f.label :営業時間 %>
         <%= f.text_field :opening_hours, autofocus: true, class: "opening_hours" %></p>
+    </div>
+
+    <div class="form-group">
+        <p><%= f.label :定休日 %>
+        <%= f.text_field :closed, autofocus: true, class: "closed" %></p>
     </div>
 
     <div class="form-group">
