--- a/app/views/admin/articles/new.html.erb
+++ b/app/views/admin/articles/new.html.erb
@@ -45,6 +45,11 @@
     </div>
 
     <div class="form-group">
+        <p><%= f.label :定休日 %>
+        <%= f.text_field :closed, autofocus: true, class: "closed" %></p>
+    </div>
+
+    <div class="form-group">
         <p><%= f.label :その他 %>
         <%= f.text_area :introduction, autofocus: true, placeholder: "説明文を記述", class: "introduction" %></p>
     </div>
