--- a/app/views/public/articles/ranking.html.erb
+++ b/app/views/public/articles/ranking.html.erb
@@ -5,10 +5,15 @@
       <i class="fas fa-crown" style="color:gold;"></i>
       <p>第<%= i%>位</p>
       <p><%= article.name %></p>
-      <%= link_to article_path(article) do %>
-      <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+        <% if admin_signed_in? %>
+        <%= link_to admin_article_path(article) do %>
+        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+        <% end %>
+      <% else %>
+        <%= link_to article_path(article) do %>
+        <%= attachment_image_tag article, :image, :fill, 200, 200, class: 'grid-article' %>
+        <% end %>
       <% end %>
-
       <p>コメント件数：<%= article.comments.count %></p>
 
     </div>
