--- a/app/views/public/blogs/edit.html.erb
+++ b/app/views/public/blogs/edit.html.erb
@@ -27,7 +27,7 @@
     </div>
 </table>
 <% end %>
-<p><%= link_to '戻る', blog_path %></p>
+<p><%= link_to '戻る', calender_user_path(@user) %></p>
 </div>
 <div class="user-show-empty"></div>
 
