--- a/app/views/public/blogs/show.html.erb
+++ b/app/views/public/blogs/show.html.erb
@@ -18,7 +18,7 @@
       <% if @user.id == current_user.id %>
       <p>
       <%= link_to '編集', edit_blog_path(@blog) %> |
-      <%= link_to '戻る', blogs_path %> |
+      <%= link_to '戻る', calender_user_path(@user) %> |
       <%= link_to '削除', blog_path(@blog), method: :delete, data: { confirm: '本当に消しますか？' } %>
       </p>
       <% end %>
